[package]
name = "stepflow-wasm"
description = "WASM build for StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow-wasm"
version = "0.0.6"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
stepflow = { path = "../stepflow/stepflow", version = "0.0.7", default-features = false }
stepflow-json = { path = "../stepflow-json", version = "0.0.2" }
wee_alloc = "0.4.5"
tinyjson = { version = "2.2.0" }
once_cell = "1.7.2"
